# PandasProfilingService

./: Dockerfile  README.md  convert_data.ipynb  main.sh  pyproject.toml  requirements.txt
.github/workflows/: build_docker_image.yaml
dataprofiler/: DataProfiler.py  data_profiler.py  main.py
dataprofiler/storage/: LocalStorageEngine.py  S3StorageEngine.py  StorageEngineInterface.py
k8s/chart/data-profiler/: Chart.yaml  values.schema.json  values.yaml
k8s/chart/data-profiler/template/: deployment.yaml  ingress.yaml  networkpolicy-ingress.yaml  networkpolicy.yaml  service.yaml
k8s/job/: generate_report.yaml
k8s/static_app/: deployment.yaml  ingress.yaml  service.yaml
tests/: S3StorageEngine_test.py  main_test.py
