[tool.poetry]
name = "pandasprofilingservice"
version = "0.1.0"
description = ""
authors = ["Pengfei Liu <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
numpy = "^1.22.1"
pandas-profiling = "^3.1.0"
boto3 = "^1.20.46"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
